fixed search bar on mobile

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -331,8 +331,8 @@ a {
     background: white;
   }
   .mobile-search-bar .search-input {
-    width: 100%;
-    padding: 0.75rem 0;
+    width: calc(100% - 1rem);
+    padding: .75rem 0 .75rem 1rem;
     border: 1px solid #ddd;
     border-radius: 999px;
   }
